--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,6 +1,6 @@
 <div class="search-container">
     <form class="search-form" #form="ngForm" (ngSubmit)="onSubmit(form)">
-        <span class="logo" routerLink="/">GladiadorVGDB</span>
+        <span class="logo" routerLink="/">GladiadorGames</span>
         <input 
         class="search-input" 
         name="search"
